added subscriptions/feeds from gemlogs, gemtext headers and atom.xml. system pages like bookmarks would reload instead of using saved state. optimizations and cleanup.